# csaopt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Pipfile  README.md  csaopt  csaopt.py  environment.dev.yml  environment.yml  index.html  requirements.txt  setup.cfg  setup.py  sonar-project.properties
CMakeModules/: FindLibUUID.cmake  FindLibedit.cmake  Findmodel.cmake  LibFindMacros.cmake
ansible/: msgqueue.yml
app/: __init__.py
app/ansible/: ansibletools.py
app/aws/: awstools.py
app/compiler/: __init__.py  compiler.py
app/docker/: setup-dockerhost.sh
app/docker/msgqueue/: Dockerfile
app/docker/worker/: Dockerfile
app/instancemanager/: __init__.py  awstools.py  instancemanager.py
app/instancemanager/setup_scripts/: aws_kafka_setup.sh
app/internal/: aws-userdata-kafka.sh  csaopt-internal.conf
app/jobs/: __init__.py  jobmanager.py
app/model/: optimization.py
app/model_loader/: __init__.py  model_loader.py  model_validator.py
app/modelcompiler/: CmakeLists.txt.template  __init__.py  modelcompiler.py
app/msgqclient/: __init__.py  client.py
app/utils/: __init__.py
conf/: csaopt.conf
csaopt/: __init__.py
csaopt/broker/: __init__.py
csaopt/docker/worker/: Dockerfile
csaopt/instancemanager/: __init__.py  awstools.py  instancemanager.py  local.py
csaopt/instancemanager/setup_scripts/: aws_worker_setup.sh
csaopt/internal/: csaopt-internal.conf
csaopt/internal/aws_setup_scripts/: aws_broker_setup.sh  aws_kafka_setup.sh  aws_worker_setup.sh
csaopt/internal/aws_startup_scripts/: aws-userdata-broker.sh  aws-userdata-redis.sh  aws-userdata-worker.sh  local-userdata-worker.sh
csaopt/jobs/: __init__.py  jobmanager.py
csaopt/model/: __init__.py  optimization.py
csaopt/model_loader/: __init__.py  model_loader.py  model_validator.py
csaopt/msgqclient/: __init__.py  client.py
csaopt/utils/: __init__.py
css/: style.css
docs/: index.html
docs/source/: conf.py  index.rst
examples/ackley/: ackley.conf  ackley_opt.py
examples/bukin_6/: bukin_6_opt.py  buking_6.conf
examples/hp/: hp_opt.py  render.py
examples/langermann/: langermann_opt.conf  langermann_opt.py
examples/rastrigin/: rastrigin.conf  rastrigin.docker.conf  rastrigin_docker_opt.py  rastrigin_opt.py
examples/rosenbrock/: drop_wave.conf  drop_wave.py
include/picojson/: picojson.h
include/pstream/: pstream.h
lib/ansible/: hosts.fmt
src/: AWSTools.cpp  AWSTools.h  AnsibleTools.cpp  AnsibleTools.h  CGOptManager.cpp  CGOptManager.h  CSAOptManager.cpp  CSAOptManager.h  Config.cpp  Config.h  InteractiveShell.cpp  InteractiveShell.h  MessageQueueClient.cpp  MessageQueueClient.h  OptimizationJob.cpp  OptimizationJob.h  SysTools.h  config.cpp  config.hpp  helpers.h  main.cpp
src/AWS/: AWSTools.cpp  AWSTools.h  CSAOptInstance.cpp  CSAOptInstance.h  Utils.h
src/Filesystem/: DirectoryScanner.h
src/Manager/: CSAOptManager.cpp  CSAOptManager.h  ManagedModel.h  ModelBuilder.cpp  ModelBuilder.h  ModelValidator.h
src/cgopt/: cgopt.hpp
test/: AWSToolsTest.cpp  AnsibleToolsTest.cpp  CGOptManagerTest.cpp  ConfigTest.cpp  DirectoryScannerTest.cpp  OptimizationJobTest.cpp  SysToolsTest.cpp  TestConfig.h
test/Testclasses/: UserDefinedOptimization.cpp  UserDefinedOptimization.h  UserDefinedTarget.cpp  UserDefinedTarget.h
tests/: context.py  test_aws.py  test_cli.py  test_e2e.py  test_jobmanager.py  test_model_loader.py  test_model_validator.py  test_modelcompiler.py  test_msqclient.py  test_runner.py  test_utils.py  test_worker.py
tests/e2e/model/: testtarget.h
tests/testmodel/: rosenbrock.cpp
